[tool.poetry]
name = "repl_python3_PXG-1"
version = "0.1.0"
description = ""
authors = ["SyntaxError <syntaxerror@syntaxcodes.onmicrosoft.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
